finished-correctly-spacing-header

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  justify-content: space-between;
+  align-items: center;
+  display:flex;
+  
 }
 
 .logo {
@@ -9,6 +13,7 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 4px;
 }
 
 ul {
@@ -23,3 +28,9 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+ ul {
+  display:flex;
+gap: 8px;
+margin: 2px;
+padding: 0;
+ }
